# mt_thesis

./: .gitignore  CMakeLists.txt  LICENSE  run_benchmarks.py  run_eval.py
src/: CMakeLists.txt
src/basic/: CMakeLists.txt  basic_node.hpp  basic_parent_node.hpp  basic_rtree.hpp  basic_rtree_persister.hpp  basic_rtree_recoverer.hpp  reinsertable.hpp
src/benchmarks/: CMakeLists.txt  insert_micro_benchmark.cpp  micro_benchmark.hpp  micro_benchmark_fixture.hpp  micro_benchmark_main.cpp  profiling_insert.cpp  profiling_pear_recovery.cpp  profiling_query.cpp  query_micro_benchmark.cpp  recovery_micro_benchmark.cpp
src/benchmarks/evaluation/: eval_cpu_cache_aligned.cpp  eval_existing_systems.cpp  eval_existing_systems_fpr.cpp  eval_fpr.cpp  eval_fpr_hyperthreading.cpp  eval_fpr_mixed_workload.cpp  eval_locking.cpp  eval_mixed_workload.cpp  eval_node_performance_baseline.cpp  eval_node_size.cpp  eval_persistence_degree.cpp  eval_persisting.cpp  eval_pmem_unaligned.cpp  eval_prefetching.cpp  eval_recovery.cpp  eval_scalability.cpp  eval_scalability_hyperthreading.cpp  eval_simd.cpp  mixed_workload_benchmarks.hpp  mixed_workload_measurement.hpp
src/benchmarks/new_eval/: new_eval_benchmarks.hpp  new_eval_fpr_query_latency.cpp  new_eval_persistence_degree.cpp  new_eval_scalability.cpp
src/fpr-tree/: CMakeLists.txt  fpr_branch.hpp  fpr_node.hpp  fpr_parent_node.hpp  fprtree.hpp
src/lib/: CMakeLists.txt  branch.hpp  custom_stats.hpp  path_entry.hpp  per_tree_allocator.hpp  rectangle.hpp
src/lib/macros/: basic_macros.hpp  helper_macros.hpp  macros.hpp  pear_maros.hpp
src/pear/: CMakeLists.txt  background_persister.hpp  node.hpp  node_cache.hpp  optional_args.hpp  p_node.hpp  parent_node.hpp  partial_persister.hpp  pear_recoverer.hpp  pear_tree.hpp  pointer_indirection.hpp  search_queue_entry.hpp  v_node.hpp
src/test/: CMakeLists.txt  basic_example.cpp  memkind_example.cpp  playground.cpp  pmdk_example.cpp  test_delete.cpp  test_query.cpp  test_recovery.cpp  test_structure.cpp
src/utils/: CMakeLists.txt  catch.hpp  export.hpp  print.hpp  test_helpers.hpp  test_universal_helpers.hpp
